--- a/assets/css/modules/_tables.scss
+++ b/assets/css/modules/_tables.scss
@@ -59,7 +59,7 @@ figure.wp-block-table,
 
     th,
     td {
-      padding: 12px;
+      padding: 14px 6px;
     }
 
     .center {
